plugins {
    id 'application'
    id 'java'
    id 'org.openjfx.javafxplugin' version "${javafx_plugins_version}"
}

allprojects {
    apply plugin: 'java'

    repositories {
        mavenCentral()
    }

    dependencies {
        testImplementation 'org.junit.jupiter:junit-jupiter:5.11.3'
        testRuntimeOnly 'org.junit.platform:junit-platform-launcher:1.11.3'
    }

    tasks.withType(Test).configureEach {
        useJUnitPlatform()
    }

    sourceSets {
        test {
            java {
                srcDirs = ['src/test/java']
            }
        }
    }
}

application {
    mainClass = "${group_id}.${start_class}"
}

dependencies {
    implementation project(':ui')

    implementation "org.openjfx:javafx-controls:${javafx_dependency_version}"
    implementation "org.openjfx:javafx-fxml:${javafx_dependency_version}"
}

javafx {
    version = javafx_version
    modules = javafx_modules.split(',').collect { it.trim() }
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

tasks.register('runApp', JavaExec) {
    group = 'application'
    description = 'Run the application with JavaFX support'
    classpath = sourceSets.main.runtimeClasspath
    mainClass = "${group_id}.${start_class}"

    jvmArgs = [
            '--module-path', configurations.runtimeClasspath.asPath,
            '--add-modules', javafx_modules
    ] as List<String>
}

tasks.register('buildApp') {
    group = 'build'
    description = 'Build the application'
    dependsOn tasks.named('build')
    doFirst {
        println "Building the application..."
    }
    doLast {
        println "Build complete!"
    }
}

tasks.register('rebuild') {
    group = 'build'
    description = 'Clean and rebuild the project'
    dependsOn 'clean', 'buildApp'
    doFirst {
        println "Cleaning the application..."
    }
    doLast {
        println "Clean and rebuild complete!"
    }
}
